@@ -12,6 +12,7 @@ import java.io.ByteArrayInputStream;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -24,7 +25,6 @@ import org.folio.bulkops.domain.dto.Errors;
 import org.folio.bulkops.domain.dto.Parameter;
 import org.folio.bulkops.domain.entity.BulkOperation;
 import org.folio.bulkops.domain.entity.BulkOperationExecutionContent;
-import org.folio.bulkops.domain.entity.BulkOperationProcessingContent;
 import org.folio.bulkops.exception.NotFoundException;
 import org.folio.bulkops.repository.BulkOperationExecutionContentRepository;
 import org.folio.bulkops.repository.BulkOperationProcessingContentRepository;
@@ -68,17 +68,21 @@ public class ErrorService {
   public Errors getErrorsPreviewByBulkOperationId(UUID bulkOperationId, int limit) {
     var bulkOperation = operationRepository.findById(bulkOperationId)
       .orElseThrow(() -> new NotFoundException("BulkOperation was not found by id=" + bulkOperationId));
-    if (DATA_MODIFICATION == bulkOperation.getStatus() || COMPLETED_WITH_ERRORS == bulkOperation.getStatus()) {
+    if (DATA_MODIFICATION == bulkOperation.getStatus() || COMPLETED_WITH_ERRORS == bulkOperation.getStatus() && noCommittedErrors(bulkOperation)) {
       var errors = bulkEditClient.getErrorsPreview(bulkOperation.getDataExportJobId(), limit);
       return new Errors().errors(errors.getErrors().stream()
           .map(this::prepareInternalErrorRepresentation)
-          .collect(Collectors.toList()))
+          .toList())
         .totalRecords(errors.getTotalRecords());
-    } else if (REVIEW_CHANGES == bulkOperation.getStatus() || COMPLETED == bulkOperation.getStatus()) {
+    } else if (REVIEW_CHANGES == bulkOperation.getStatus() || COMPLETED == bulkOperation.getStatus() || COMPLETED_WITH_ERRORS == bulkOperation.getStatus()) {
       return getExecutionErrors(bulkOperationId, limit);
     } else {
       throw new NotFoundException("Errors preview is not available");
     }
+  }
+
+  private boolean noCommittedErrors(BulkOperation bulkOperation) {
+    return Objects.isNull(bulkOperation.getCommittedNumOfErrors()) || bulkOperation.getCommittedNumOfErrors() == 0;
   }
 
   private Error prepareInternalErrorRepresentation(Error e) {
@@ -92,19 +96,11 @@ public class ErrorService {
       .collect(Collectors.joining(Constants.NEW_LINE_SEPARATOR));
   }
 
-  private Error processingContentToError(BulkOperationProcessingContent content) {
-    return new Error()
-      .message(content.getErrorMessage())
-      .parameters(Collections.singletonList(new Parameter()
-        .key(IDENTIFIER)
-        .value(content.getIdentifier())));
-  }
-
   private Errors getExecutionErrors(UUID bulkOperationId, int limit) {
     var errorPage = executionContentRepository.findByBulkOperationIdAndErrorMessageIsNotNull(bulkOperationId, OffsetRequest.of(0, limit));
     var errors = errorPage.toList().stream()
       .map(this::executionContentToError)
-      .collect(Collectors.toList());
+      .toList();
     return new Errors()
       .errors(errors)
       .totalRecords((int) errorPage.getTotalElements());
